# Camera

./: CMakeLists.txt  make
src/logging/: Logger.cpp  Logger.hpp
src/utils/: ret.cpp  ret.hpp
src/v4l2_cam/: camera.cpp  camera.hpp  v4l2_api.cpp  v4l2_api.hpp
